added PH to NetSci speaker list
Paul Hines

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:24:06Z</date>
+						<date>2019-01-07T17:17:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7076,6 +7076,16 @@
 								</data>
 								<key>Size</key>
 								<integer>61496</integer>
+							</dict>
+							<key>files/stacks-image-1629f24.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								PCup30bjv0Xn
+								AFSA01ed5A==
+								</data>
+								<key>Size</key>
+								<integer>26372</integer>
 							</dict>
 							<key>files/stacks-image-1fdb6e6-350x250.jpg</key>
 							<dict>
@@ -7266,6 +7276,16 @@
 								</data>
 								<key>Size</key>
 								<integer>69706</integer>
+							</dict>
+							<key>files/stacks-image-6467c3a-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Krp7Og269lDp
+								zJmYejGYxg==
+								</data>
+								<key>Size</key>
+								<integer>29317</integer>
 							</dict>
 							<key>files/stacks-image-6db2017-500x376.jpg</key>
 							<dict>
@@ -7711,31 +7731,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9WRkEsoUQ/kX
-								NdexT/n3HA==
+								xj3/w7vAZDaP
+								/lb3mxWleA==
 								</data>
 								<key>Size</key>
-								<integer>324132</integer>
+								<integer>330181</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								sLFDt3QIG2vi
-								4MsJSFWB4A==
+								F3rqlHNtrEag
+								Z537mz0OeA==
 								</data>
 								<key>Size</key>
-								<integer>31849</integer>
+								<integer>32031</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								yceP51YTtqrN
-								aRyWBwXulQ==
+								RYqn+SatrJ67
+								Zpmp9jc88w==
 								</data>
 								<key>Size</key>
-								<integer>239176</integer>
+								<integer>244603</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8086,7 +8106,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:24:06Z</date>
+						<date>2019-01-07T17:17:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8150,6 +8170,16 @@
 								</data>
 								<key>Size</key>
 								<integer>61496</integer>
+							</dict>
+							<key>files/stacks-image-1629f24.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								PCup30bjv0Xn
+								AFSA01ed5A==
+								</data>
+								<key>Size</key>
+								<integer>26372</integer>
 							</dict>
 							<key>files/stacks-image-1fdb6e6-350x250.jpg</key>
 							<dict>
@@ -8280,6 +8310,16 @@
 								</data>
 								<key>Size</key>
 								<integer>13322</integer>
+							</dict>
+							<key>files/stacks-image-6467c3a-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Krp7Og269lDp
+								zJmYejGYxg==
+								</data>
+								<key>Size</key>
+								<integer>29317</integer>
 							</dict>
 							<key>files/stacks-image-6f3f11d-350x375.png</key>
 							<dict>
@@ -8555,31 +8595,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								d9Gn9Kr5Odt3
-								KrWVW7GvVA==
+								pbT3UlArBmwA
+								k5CXCmdO+g==
 								</data>
 								<key>Size</key>
-								<integer>227044</integer>
+								<integer>233093</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								0JRr1GxATy7N
-								SzEDZ9UuBA==
+								inKlVExsSXNu
+								EVR8chcTdQ==
 								</data>
 								<key>Size</key>
-								<integer>27481</integer>
+								<integer>27663</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4u/ac4u6Njw2
-								us9kUtJHlQ==
+								sPT+4GwHXD1E
+								K3hXYyHp+Q==
 								</data>
 								<key>Size</key>
-								<integer>137236</integer>
+								<integer>142663</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12439,8 +12479,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDv7inW
-				aS+AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDx4KgC
+				AvOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12450,7 +12490,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDv7inWbuuA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDx4KgCBzWA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
