updated dans name netsci
updated dans name netsci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-07T17:17:56Z</date>
+						<date>2019-01-07T18:01:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7751,11 +7751,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RYqn+SatrJ67
-								Zpmp9jc88w==
+								C7DOBdLgfZDX
+								OgBX36642w==
 								</data>
 								<key>Size</key>
-								<integer>244603</integer>
+								<integer>244599</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8106,7 +8106,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-07T17:17:56Z</date>
+						<date>2019-01-07T18:01:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8615,11 +8615,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sPT+4GwHXD1E
-								K3hXYyHp+Q==
+								tDwInk2TzeHP
+								6aVGycCEgw==
 								</data>
 								<key>Size</key>
-								<integer>142663</integer>
+								<integer>142659</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11270,7 +11270,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-10T15:22:03Z</date>
+						<date>2019-01-07T18:01:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11319,11 +11319,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PLcHU20TnkxE
-								lBVDM2w+9w==
+								ZpYq0fvUm0tG
+								lJJXyZnrcg==
 								</data>
 								<key>Size</key>
-								<integer>4644</integer>
+								<integer>4708</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11372,7 +11372,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-10T15:22:03Z</date>
+						<date>2019-01-07T18:01:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12411,11 +12411,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								850ultq89Zoz
-								a0PftS6Cbg==
+								qdobDBOuY4yd
+								6pHbBIve2w==
 								</data>
 								<key>Size</key>
-								<integer>3475</integer>
+								<integer>4178</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12479,8 +12479,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDx4KgC
-				AvOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDx5ceV
+				PN6AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12490,7 +12490,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDx4KgCBzWA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDx5ceVQCWA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
