--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-07T17:17:56Z</date>
+						<date>2019-01-07T18:01:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RYqn+SatrJ67
-								Zpmp9jc88w==
+								C7DOBdLgfZDX
+								OgBX36642w==
 								</data>
 								<key>Size</key>
-								<integer>244603</integer>
+								<integer>244599</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
