--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:11:54Z</date>
+						<date>2019-01-07T21:27:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,31 +374,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YsIokxuap+kU
-								KamVsQU1xQ==
+								IBSI0w3ST8Fr
+								4vTILhUEuA==
 								</data>
 								<key>Size</key>
-								<integer>206480</integer>
+								<integer>207777</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								VQCTNQNJ0Fv7
-								Lvh0vA7poQ==
+								8GfTA+oW98kr
+								cVvJMjbSDw==
 								</data>
 								<key>Size</key>
-								<integer>29119</integer>
+								<integer>29301</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								qTCDO8n5/5Z3
-								IVdeHwsPrA==
+								ec/26fXR4BGo
+								sUtnIS2/AQ==
 								</data>
 								<key>Size</key>
-								<integer>136587</integer>
+								<integer>138195</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
