--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-07T18:01:45Z</date>
+						<date>2019-01-07T21:27:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -814,31 +814,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xj3/w7vAZDaP
-								/lb3mxWleA==
+								hIdpjHwpoCZU
+								CIPCkgoOpA==
 								</data>
 								<key>Size</key>
-								<integer>330181</integer>
+								<integer>331478</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								F3rqlHNtrEag
-								Z537mz0OeA==
+								s+5p2c0i4g+L
+								OrcKxinUYg==
 								</data>
 								<key>Size</key>
-								<integer>32031</integer>
+								<integer>32213</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								C7DOBdLgfZDX
-								OgBX36642w==
+								5u+2CxhlnRdG
+								7bQmyDMm8Q==
 								</data>
 								<key>Size</key>
-								<integer>244599</integer>
+								<integer>246207</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
