--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-07T21:27:18Z</date>
+						<date>2019-01-08T19:44:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IBSI0w3ST8Fr
-								4vTILhUEuA==
+								F+/oC6SIhtx3
+								UgqwPlCZbg==
 								</data>
 								<key>Size</key>
-								<integer>207777</integer>
+								<integer>207884</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ec/26fXR4BGo
-								sUtnIS2/AQ==
+								Ho4ce9ztXypN
+								gQallQNRfQ==
 								</data>
 								<key>Size</key>
-								<integer>138195</integer>
+								<integer>139690</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
