--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-07T21:27:18Z</date>
+						<date>2019-01-08T19:44:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -814,18 +814,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hIdpjHwpoCZU
-								CIPCkgoOpA==
+								AFSIwqLhp3mQ
+								UHEfrgAzAw==
 								</data>
 								<key>Size</key>
-								<integer>331478</integer>
+								<integer>331585</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								s+5p2c0i4g+L
-								OrcKxinUYg==
+								Jqxp3Y8aLGCQ
+								rc3f3b+vuw==
 								</data>
 								<key>Size</key>
 								<integer>32213</integer>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5u+2CxhlnRdG
-								7bQmyDMm8Q==
+								AfWmIu3ole9O
+								lMowsPwOHA==
 								</data>
 								<key>Size</key>
-								<integer>246207</integer>
+								<integer>247702</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
