Schedule outline NetSci
Schedule outline NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7768,7 +7768,7 @@
 					<key>page54 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:11:54Z</date>
+						<date>2019-01-08T22:41:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7847,11 +7847,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								paqaywLJjmhF
-								Q8dPBjNR+g==
+								h6jPJHx2NL7d
+								r4K1Xr2TtQ==
 								</data>
 								<key>Size</key>
-								<integer>128350</integer>
+								<integer>128638</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -7867,11 +7867,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jpie6H5J3+Y3
-								NS7D3uwVkw==
+								0YjjqgBJUskE
+								iXjWETy4sg==
 								</data>
 								<key>Size</key>
-								<integer>58132</integer>
+								<integer>58436</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7884,7 +7884,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:11:54Z</date>
+						<date>2019-01-08T22:41:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7983,11 +7983,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tdgn/yfq2qvx
-								q/6y8/RaVg==
+								jihq6+Elz8LV
+								1MFztn2XpQ==
 								</data>
 								<key>Size</key>
-								<integer>144638</integer>
+								<integer>148046</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -8003,11 +8003,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VT3E+Wk/6xSw
-								JNv8oE1wBQ==
+								99dWDCEi9Wtp
+								fD/E0Gaf4A==
 								</data>
 								<key>Size</key>
-								<integer>66331</integer>
+								<integer>75371</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8106,7 +8106,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-07T18:01:45Z</date>
+						<date>2019-01-08T22:44:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8595,11 +8595,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pbT3UlArBmwA
-								k5CXCmdO+g==
+								MKuqZKIWcq91
+								gBOEu2/2sA==
 								</data>
 								<key>Size</key>
-								<integer>233093</integer>
+								<integer>234269</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -8615,11 +8615,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tDwInk2TzeHP
-								6aVGycCEgw==
+								/hlqX/hZudtJ
+								Xvqv1bTAlA==
 								</data>
 								<key>Size</key>
-								<integer>142659</integer>
+								<integer>143270</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11270,7 +11270,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T19:44:27Z</date>
+						<date>2019-01-08T22:44:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11319,8 +11319,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								A2cEhcse8KbB
-								o7yRrg8Vrw==
+								FGUnDEljUw2j
+								Xt426LI2dw==
 								</data>
 								<key>Size</key>
 								<integer>4708</integer>
@@ -11372,7 +11372,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T19:43:29Z</date>
+						<date>2019-01-08T22:44:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12479,8 +12479,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDympHE
-				Wt6AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDyr7PP
+				xuOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12490,7 +12490,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDympHEXt2A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDyr7PPyc2A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
