--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:11:54Z</date>
+						<date>2019-01-08T22:41:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								paqaywLJjmhF
-								Q8dPBjNR+g==
+								h6jPJHx2NL7d
+								r4K1Xr2TtQ==
 								</data>
 								<key>Size</key>
-								<integer>128350</integer>
+								<integer>128638</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jpie6H5J3+Y3
-								NS7D3uwVkw==
+								0YjjqgBJUskE
+								iXjWETy4sg==
 								</data>
 								<key>Size</key>
-								<integer>58132</integer>
+								<integer>58436</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
