--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:11:54Z</date>
+						<date>2019-01-08T22:41:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tdgn/yfq2qvx
-								q/6y8/RaVg==
+								jihq6+Elz8LV
+								1MFztn2XpQ==
 								</data>
 								<key>Size</key>
-								<integer>144638</integer>
+								<integer>148046</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VT3E+Wk/6xSw
-								JNv8oE1wBQ==
+								99dWDCEi9Wtp
+								fD/E0Gaf4A==
 								</data>
 								<key>Size</key>
-								<integer>66331</integer>
+								<integer>75371</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
