--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-07T18:01:45Z</date>
+						<date>2019-01-08T22:44:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,11 +524,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pbT3UlArBmwA
-								k5CXCmdO+g==
+								MKuqZKIWcq91
+								gBOEu2/2sA==
 								</data>
 								<key>Size</key>
-								<integer>233093</integer>
+								<integer>234269</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -544,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tDwInk2TzeHP
-								6aVGycCEgw==
+								/hlqX/hZudtJ
+								Xvqv1bTAlA==
 								</data>
 								<key>Size</key>
-								<integer>142659</integer>
+								<integer>143270</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
